fix height issue on firefox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
-body {
+html, body {
   font-family: helvetica neue, helvetica, arial;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 #video {
